# portifolio_python

./: .pdm-python  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/portifolio_python/: lib.py  main.py
src/portifolio_python/components/: __init__.py  image_static.py
tests/: test_get_pinneds.py
