[project]
name = "portifolio_python"
version = "0.1.0"
description = "Um simples portifólio feito com python + streamlit"
authors = [
    {name = "Bruno Davi", email = "48166556+brunodavi@users.noreply.github.com"},
]
dependencies = [
    "streamlit>=1.27.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = 'streamlit run src/portifolio_python/main.py'

