[tool.poetry]
name = "portifolio-python"
version = "1.2.3"
description = "Um simples portifólio em python + streamlit"
authors = ["Bruno Davi <48166556+brunodavi@users.noreply.github.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[tool.taskipy.tasks]
start = 'streamlit run src/portifolio_python/main.py'
test = 'python -m unittest'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
